# regex

./: MAINTAINERS  build.sh  meson_options.txt  run.sh
app/: Makefile
app/test-regex/: Makefile  hello.txt  main.c
app/test-regexdev/: Makefile  hra_lite_main.c  hra_platform.h  l7_rules_small.rules  main.c  meson.build  run.sh  rxp_api_app.h  rxp_mlnx_api_dpdk.c  tests.c  tests.h
app/test-regexdev-hra-lite/: Makefile  hra_lite_main.c  hra_platform.c  meson.build  rxp_api_app.h  rxp_mlnx_api_dpdk.c
app/test-regexdev-hra-lite/rof/: l7_small.rof2  test.rof2
config/: common_base  meson.build  rte_config.h
doc/api/: doxy-api-index.md  doxy-api.conf.in
doc/guides/nics/: mlx5.rst
drivers/: Makefile  meson.build
drivers/bus/: Makefile  meson.build
drivers/bus/mlx5_pci/: Makefile  meson.build  mlx5_pci_bus.c  rte_bus_mlx5_pci.h  rte_bus_mlx5_pci_version.map
drivers/common/: Makefile  meson.build
drivers/regex/: Makefile  meson.build
drivers/regex/mlx5/: Makefile  host.c  host.h  meson.build  mlx5.c  mlx5.h  mlx5_regex.c  mlx5_regex.h  mlx5_regex_control.c  mlx5_regex_devx.c  mlx5_regex_fastpath.c  mlx5_regex_mr.c  mlx5_regex_mr.h  mlx5_regex_queue.c  mlx5_regex_queue.h  mlx5_regex_utils.h  mlx5_rxp.c  mlx5_rxp.h  mlx5_rxp_csrs.h  rxp-api.h  rxp-csrs.h  rxp.h  rxp_mlnx_api.c
drivers/vdpa/: Makefile  meson.build
lib/: Makefile  meson.build
lib/librte_regexdev/: Makefile  meson.build  rte_regexdev.c  rte_regexdev.h  rte_regexdev_core.h  rte_regexdev_driver.h  rte_regexdev_version.map
lib/librte_vhost/: virtio_net.c
mk/: rte.app.mk
(+88 files in other folders)
